--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
+    <div class="box1"></div>
 </body>
 </html>
