--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
+    <div class="main">
+        <div class="nav">
+            <div class="logo"><img src="logo.jpeg" alt=""></div>
+            <h4>Home</h4>
+            <h4>About</h4>
+            <h4>Services</h4>
+            <h4>Contact Us</h4>
+        </div>
+    </div>
 </body>
 </html>
