--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Hub</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="main">
-        <div class="nav">
-            <div class="logo"><img src="logo.jpeg" alt=""></div>
-            <h4>Home</h4>
-            <h4>About</h4>
-            <h4>Services</h4>
-            <h4>Contact Us</h4>
-        </div>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Git Hub</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="navbar">
+			<div class="logo">LOGO</div>
+			<nav>
+				<a href="/home">Home</a>
+				<a href="/about">About</a>
+				<a href="/skills">Skills</a>
+				<a href="/services">Services</a>
+				<a href="/contact">Contact</a>
+			</nav>
+		</div>
+	</body>
 </html>
