CSS grid layout

--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
 				<a href="/contact">Contact</a>
 			</nav>
 		</div>
+        <main>
+            <div class="parent">
+                <div>first</div>
+                <div>second</div>
+                <div>third</div>
+                <div>fourth</div>
+            </div>
+        </main>
 	</body>
 </html>
